@@ -5,6 +5,7 @@ date.timezone=UTC
 --FILE--
 <?php
 $now = new DateTimeImmutable();
+$simpleInterval = new DateInterval("P2D");
 
 $date = (new ReflectionClass(DateTime::class))->newInstanceWithoutConstructor();
 try {
@@ -20,9 +21,50 @@ try {
 	echo get_class($e), ': ', $e->getMessage(), "\n";
 }
 
+$date = (new ReflectionClass(DateTime::class))->newInstanceWithoutConstructor();
+$dateperiod = (new ReflectionClass(DatePeriod::class))->newInstanceWithoutConstructor();
+$dateinterval = (new ReflectionClass(DateInterval::class))->newInstanceWithoutConstructor();
+try {
+	$dateperiod->__unserialize(['start' => $date]);
+} catch (Error $e) {
+	echo get_class($e), ': ', $e->getMessage(), "\n";
+}
+
+try {
+	$dateperiod->__unserialize(['start' => $now, 'end' => $date]);
+} catch (Error $e) {
+	echo get_class($e), ': ', $e->getMessage(), "\n";
+}
+
+try {
+	$dateperiod->__unserialize(['start' => $now, 'end' => $now, 'current' => $date]);
+} catch (Error $e) {
+	echo get_class($e), ': ', $e->getMessage(), "\n";
+}
+
+try {
+	$dateperiod->__unserialize(['start' => $now, 'end' => $now, 'current' => $now, 'interval' => $dateinterval]);
+} catch (Error $e) {
+	echo get_class($e), ': ', $e->getMessage(), "\n";
+}
+
+try {
+	$dateperiod->__unserialize([
+		'start' => $now, 'end' => $now, 'current' => $now, 'interval' => $simpleInterval,
+		'recurrences' => 2, 'include_start_date' => true, 'include_end_date' => true,
+	]);
+	echo "DatePeriod::__unserialize: SUCCESS\n";
+} catch (Error $e) {
+	echo get_class($e), ': ', $e->getMessage(), "\n";
+}
 echo "OK\n";
 ?>
 --EXPECT--
 Error: The DateTimeInterface object has not been correctly initialized by its constructor
 Error: The DateTimeInterface object has not been correctly initialized by its constructor
+Error: Invalid serialization data for DatePeriod object
+Error: Invalid serialization data for DatePeriod object
+Error: Invalid serialization data for DatePeriod object
+Error: Invalid serialization data for DatePeriod object
+DatePeriod::__unserialize: SUCCESS
 OK
